# PROJECT_POS

./: CMakeLists.txt  README.md  ini.c  ini.h  main.cpp
Image_processing/: Image_processing.sln
Image_processing/Image_processing/: Image_processing.cpp  Image_processing.vcxproj  Image_processing.vcxproj.filters
